test/TestSuite/Syntax/Errors/sorting_crit_exptd1.tjp
project test "Test" "1.0" 2007-08-19 +2m {
  timezone "Europe/Amsterdam"
}

task t "T" {
  start 2007-08-19
}

taskreport report "report.html" {
# MARK: error 11 sorting_crit_exptd1
	sorttasks plan.start.foo.bar
}

